# smartspeaker

./: README.md  app.py  pyproject.toml
chat/: langchain_chat.py  openai_chat.py
chat/langchain_tools/: gettime.py  search_music.py
speech/: speech2text.py  text2speech.py
test/: test_audio_device.py
wakeword/: wakeword.py
wakeword/Hey-cherry_en_mac_v2_2_0/: Hey-cherry_en_mac_v2_2_0.ppn
