[tool.poetry]
name = "smartspeaker"
version = "0.1.0"
description = "smart speaker"
authors = ["lucas-shao <lucas_shao@126.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.16"
pvporcupine = "^2.2.1"
pyaudio = "^0.2.13"
azure-cognitiveservices-speech = "^1.29.0"
openai = "^0.27.8"
tiktoken = "^0.4.0"
langchain = "^0.0.196"
wolframalpha = "^5.0.0"
cn2an = "^0.5.20"
google-search-results = "^2.4.2"
python-vlc = "^3.0.18122"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
